clusters/cluster/core/unifi/unifi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: default
spec:
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app.kubernetes.io/instance: unifi
      app.kubernetes.io/name: unifi
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: unifi
        app.kubernetes.io/name: unifi
    spec:
      containers:
      - name: unifi
        image: jacobalberty/unifi:v8.6.9 # {"$imagepolicy": "flux-system:unifi"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 8443
        - containerPort: 3478
        volumeMounts:
        - name: unifi-config
          mountPath: /unifi
      volumes:
      - name: unifi-config
        persistentVolumeClaim:
          claimName: unifi-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
    metallb.universe.tf/ip-allocated-from-pool: myipaddresspool
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 10.10.10.62
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 8443
  - name: speedtest
    protocol: TCP
    port: 6789
    targetPort: 6789
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: discovery
    port: 10001
    protocol: UDP
    targetPort: 10001
  selector:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/name: unifi
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  namespace: default
spec:
  ingressClassName: nginx
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.org/ssl-services: "unifi"
   #nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  tls:
    - hosts:
        - "unifi.tallflix.ca"
      secretName: tls-secret
  rules:
    - host: "unifi.tallflix.ca"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: unifi
                port:
                  name: https
          # - pathType: Prefix
          #   path: /inform
          #   backend:
          #     service:
          #       name: unifi
          #       port:
          #         number: 8080
